--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ before_script:
 - wstool up
 - cd ~/sara_ws/
 - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+- cd ~/sara_ws/src/sara_robot/
+- git submodule init
+- git submodule update
 script:
 - source /opt/ros/$ROS_DISTRO/setup.bash
 - cd ~/sara_ws
