--- a/sara_arm/package.xml
+++ b/sara_arm/package.xml
@@ -45,9 +45,11 @@
   <build_depend>roscpp</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>wm_arm_msgs</build_depend>
+  <build_depend>rospy</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
   <run_depend>wm_arm_msgs</run_depend>
 
 
