--- a/sara_arm/package.xml
+++ b/sara_arm/package.xml
@@ -3,11 +3,7 @@
   <name>sara_arm</name>
   <version>0.0.0</version>
   <description>The sara_arm package</description>
-
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="PhilLM@todo.todo">xhache</maintainer>
+  <maintainer email="PhilLM@todo.todo">PhilLM</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
