--- a/sara_arm/package.xml
+++ b/sara_arm/package.xml
@@ -15,13 +15,10 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/wm_arm_driver</url> -->
+  <url type="website">https://github.com/WalkingMachine/sara_robot</url> -->
 
 
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <author email="philippe.la-madeleine.1@etsmtl.ca">Philippe La Madeleine</author> -->
 
 
   <!-- The *_depend tags are used to specify dependencies -->
