--- a/sara_arm/package.xml
+++ b/sara_arm/package.xml
@@ -39,11 +39,21 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>wm_arm_msgs</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>hardware_interface</build_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>wm_arm_msgs</run_depend>
+  <run_depend>hardware_interface</run_depend>
+  <run_depend>controller_manager</run_depend>
+
+
+
+  <run_depend>joint_trajectory_controller</run_depend>
+  <build_depend>joint_trajectory_controller</build_depend>
+  <build_depend>controller_manager</build_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
