--- a/sara_arm/config/sara_arm_parametres.yaml
+++ b/sara_arm/config/sara_arm_parametres.yaml
@@ -1,4 +1,8 @@
-sara_arm_velocity_controller:
+sara_arm_joint_publisher:
+  type: "joint_state_controller/JointStateController"
+  publish_rate: 50
+
+sara_arm_controller:
   type: "velocity_controllers/JointTrajectoryController"
   joints:
     - Motor1
@@ -12,7 +16,7 @@ sara_arm_velocity_controller:
 
 
   # Velocity commands timeout [s], default 0.5
-  cmd_vel_timeout: 0.25
+  cmd_vel_timeout: 0.5
 
   # Base frame_id
   base_frame_id: base_link #default: base_link
