--- a/sara_arm/config/sara_arm_parametres.yaml
+++ b/sara_arm/config/sara_arm_parametres.yaml
@@ -4,19 +4,14 @@ sara_arm_joint_publisher:
 
 sara_arm_controller:
   type: "velocity_controllers/JointTrajectoryController"
-  joints:
-    - Motor1
-    - Motor2
-
-  gains: # Required because we're controlling a velocity interface
-    Motor1: {p: 1,  d: 1, i: 1, i_clamp: 1}
-    Motor2: {p: 1,  d: 1, i: 1, i_clamp: 1}
-
   publish_rate: 50               # default: 50
+  joints:
+    - sara_arm_joint_1
+    - sara_arm_joint_2
+    - sara_arm_joint_3
+    - sara_arm_joint_4
+    - sara_arm_joint_5
 
 
   # Velocity commands timeout [s], default 0.5
   cmd_vel_timeout: 0.5
-
-  # Base frame_id
-  base_frame_id: base_link #default: base_link
